added new images for agro project

--- a/agro-tour.html
+++ b/agro-tour.html
@@ -179,9 +179,12 @@ var mailchimpSF = {"ajax_url":"http:\/\/room11.com.au\/"};
               </div>
   <div class="images" style="border-bottom:2px solid #000; margin-bottom:50px; padding-bottom:40px;">
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts2.jpg"  />
+          <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts6.jpg"  />
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts3.jpg"  />
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts4.jpg"  />
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts5.jpg"  />
+          <img class="lazy" style="float:left; max-width:100%;" src="images/arch.jpg"  />
+          <img class="lazy" style="float:left; max-width:100%;" src="images/arch2.jpg"  />
       </div>
 
 </div>
