--- a/index.html
+++ b/index.html
@@ -330,8 +330,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/room11.com.au\/"};
         </div>
       </div>
         <div id="container" class="clearfix">
-        <a href="http://room11.com.au/projects/project-one/" id="_0" class="projectItem element featured residential ">
-        <img src="images/stkitts1.jpg" class="greyscale" />
+        <a href="http://room11.com.au/projects/project-one/" id="_0" class="projectItem element featured commercial in-progress ">
         <img src="images/stkitts1.jpg" class="colour" />
         <span class="overlay">Little Big House</span>
       </a>
