--- a/chinese.html
+++ b/chinese.html
@@ -166,8 +166,8 @@
                 </div>
               </div>
         <div class="images" style="border-bottom:2px solid #000; margin-bottom:50px; padding-bottom:40px;">
-          <img class="lazy" style="float:left; max-width:100%; margin-left:230px" src="images/chinese.jpg"  />
-          <img class="lazy" style="float:left; max-width:100%; margin-left:230px" src="images/chinese2.jpg"  />
+          <img class="slim" style="float:left; max-width:100%; margin-left:230px" src="images/chinese.jpg"  />
+          <img class="slim" style="float:left; max-width:100%; margin-left:230px" src="images/chinese2.jpg"  />
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts3.jpg"  />
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts4.jpg"  />
           <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts5.jpg"  />
