--- a/index.html
+++ b/index.html
@@ -325,20 +325,41 @@ var mailchimpSF = {"ajax_url":"http:\/\/room11.com.au\/"};
             <li><a href="#features" data-option-value=".in-progress" class="in-progress">In Progress</a></li>
             <li><a href="#features" data-option-value=".residential" class="residential">Residential</a></li>
             <li><a href="#features" data-option-value=".commercial" class="commercial">Commercial</a></li>
-            <li><a href="#features" data-option-value=".public" class="public">Statue</a></li>
+            <li><a href="#features" data-option-value=".public" class="public">Sculpture</a></li>
                         </ul>
         </div>
       </div>
-        <div id="container" class="clearfix">
-        <a href="agro-tour.html" id="_0" class="projectItem element featured commercial in-progress ">
+      <div id="container" class="clearfix">
+      <a href="agro-tour.html" id="_0" class="projectItem element featured commercial in-progress ">
         <img src="images/stkitts1.jpg" class="colour" />
         <span class="overlay">Coffee House</span>
       </a>
 
-         <a href="chinese.html" id="_0" class="projectItem element featured commercial">
+      <a href="chinese.html" id="_0" class="projectItem element featured commercial">
         <img src="images/chinese.jpg" class="colour" />
-        <span class="overlay">Traditional Chinese Roof</span>
+        <span class="overlay">Chinese Roof</span>
       </a>
+
+       <a href="dome.html" id="_0" class="projectItem element featured commercial">
+        <img src="images/dome1.jpg" class="colour" />
+        <span class="overlay">Dome</span>
+      </a>
+
+       <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
+        <img src="images/chinese.jpg" class="colour" />
+        <span class="overlay">Palace Roof</span>
+      </a>
+
+       <a href="dome.html" id="_0" class="projectItem element public">
+        <img src="images/budda.jpg" class="colour" />
+        <span class="overlay">Budda Statue</span>
+      </a>
+
+       <a href="chinese.html" id="_0" class="projectItem element featured commercial">
+        <img src="images/chinese.jpg" class="colour" />
+        <span class="overlay">Chinese Roof</span>
+      </a>
+
 
 
         <a href="http://room11.com.au/projects/port-arthur-house/" id="_1" class="projectItem element featured residential ">
