revising photo sizing

--- a/aladdin.html
+++ b/aladdin.html
@@ -148,7 +148,7 @@
       <div id="content" role="main">
         <div class="contentInner">
           <div class="projectInner">
-            <img src="images/chinese4.jpg" style="max-width:100%; margin-left:150px" />
+            <img src="images/aladdin.jpg" style="max-width:100%; margin-left:150px" />
              <h2 class="projectTitle">Arabic Palace</h2>
               <div class="projectTitleDivider"><span></span></div>
                 <div class="postCats">
