updating isotope its contents

--- a/index.html
+++ b/index.html
@@ -307,19 +307,30 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <span class="overlay">Coffee House</span>
       </a>
 
-      <a href="chinese.html" id="_0" class="projectItem element featured commercial">
-        <img src="images/chinese.jpg" class="colour" />
-        <span class="overlay">Chinese Roof</span>
+      <a href="agro-tour.html" id="_0" class="projectItem element featured commercial in-progress ">
+        <img src="images/stkitts2.jpg" class="colour" />
+        <span class="overlay">Window Arch</span>
       </a>
 
        <a href="dome.html" id="_0" class="projectItem element featured commercial">
         <img src="images/dome1.jpg" class="colour" />
         <span class="overlay">Dome</span>
       </a>
+      <a href="chinese.html" id="_0" class="projectItem element featured commercial">
+        <img src="images/chinese.jpg" class="colour" />
+        <span class="overlay">Chinese Roof</span>
+      </a>
+
+
+
 
        <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
         <img src="images/red.jpg" class="colour" />
         <span class="overlay">Palace Roof</span>
+      </a>
+      <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
+        <img src="images/red2.jpg" class="colour" />
+        <span class="overlay">Chinese Palace Roof</span>
       </a>
 
        <a href="aladdin.html" id="_0" class="projectItem element featured commercial">
@@ -332,10 +343,23 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <span class="overlay">Budda Statue</span>
       </a>
 
-       <a href="chinese.html" id="_0" class="projectItem element featured commercial">
-        <img src="images/chinese.jpg" class="colour" />
-        <span class="overlay">Chinese Roof</span>
-      </a>
+
+        <a href="sculptures.html" id="_0" class="projectItem element featured public">
+        <img src="images/sculp2.jpg" class="colour" />
+        <span class="overlay">Decorative</span>
+        </a>
+
+          <a href="sculptures.html" id="_0" class="projectItem element featured public">
+        <img src="images/sculp8.jpg" class="colour" />
+        <span class="overlay">Chinese Arch</span>
+        </a>
+
+        <a href="sculptures.html" id="_0" class="projectItem element featured public">
+        <img src="images/s2.jpg" class="colour" />
+        <span class="overlay"> Pattern</span>
+        </a>
+
+
 
 
 
