--- a/studio.html
+++ b/studio.html
@@ -130,10 +130,6 @@ var mailchimpSF = {"ajax_url":"http:\/\/room11.com.au\/"};
   <header id="branding" role="banner">
       <div class="headerInner">
         <img src = "images/icon.png" class ="logo">
-
-
-
-
         <nav id="access" role="navigation">
           <h3 class="assistive-text">Main menu</h3>
                     <div class="skip-link"><a class="assistive-text" href="#content" title="Skip to primary content">Skip to primary content</a></div>
@@ -154,7 +150,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/room11.com.au\/"};
       <div id="content" role="main">
         <div class="contentInner">
               <img src="images/dome3.jpg" style="max-width:45.1%; margin-top: 40px" />
-             <img src = "images/dad.jpg" style= "width:45%; height:100%; float:right; margin-top:40px">
+             <img src = "images/tony.jpg" style= "width:45%; height:100%; float:right; margin-top:40px">
                 <div class="textContent" style="margin-top:20px; border:0px;">
             <div class="leftColumn">
                 <span class="title" style= "letter-spacing:1px; text-transform:uppercase;">Founder</span>
