changes made on isotope

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <span class="overlay">Coffee House</span>
       </a>
 
-      <a href="agro-tour.html" id="_0" class="projectItem element featured commercial in-progress ">
+      <a href="agro-tour.html" id="_0" class="projectItem element commercial in-progress ">
         <img src="images/stkitts2.jpg" class="colour" />
         <span class="overlay">Window Arch</span>
       </a>
@@ -316,13 +316,16 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <img src="images/dome1.jpg" class="colour" />
         <span class="overlay">Dome</span>
       </a>
+
+      <a href="dragon.html" id="_0" class="projectItem element featured commercial">
+        <img src="images/dragon.jpg" class="colour" />
+        <span class="overlay">Dragon Ship</span>
+      </a>
+
       <a href="chinese.html" id="_0" class="projectItem element featured commercial">
         <img src="images/chinese.jpg" class="colour" />
         <span class="overlay">Chinese Roof</span>
       </a>
-
-
-
 
        <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
         <img src="images/red.jpg" class="colour" />
@@ -332,33 +335,30 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <img src="images/red2.jpg" class="colour" />
         <span class="overlay">Chinese Palace Roof</span>
       </a>
-
        <a href="aladdin.html" id="_0" class="projectItem element featured commercial">
         <img src="images/aladdin1.jpg" class="colour" />
         <span class="overlay">Arabic Palace</span>
       </a>
-
        <a href="sculptures.html" id="_0" class="projectItem element public">
         <img src="images/budda.jpg" class="colour" />
         <span class="overlay">Budda Statue</span>
       </a>
-
-
         <a href="sculptures.html" id="_0" class="projectItem element featured public">
         <img src="images/sculp2.jpg" class="colour" />
         <span class="overlay">Decorative</span>
         </a>
-
-          <a href="sculptures.html" id="_0" class="projectItem element featured public">
+        <a href="sculptures.html" id="_0" class="projectItem element featured public">
         <img src="images/sculp8.jpg" class="colour" />
         <span class="overlay">Chinese Arch</span>
         </a>
-
         <a href="sculptures.html" id="_0" class="projectItem element featured public">
         <img src="images/s2.jpg" class="colour" />
         <span class="overlay"> Pattern</span>
         </a>
-
+         <a href="sculptures.html" id="_0" class="projectItem element featured public">
+        <img src="images/sculp1.jpg" class="colour" />
+        <span class="overlay"> Ledges</span>
+        </a>
 
 
 
