adding new page

--- a/chinese.html
+++ b/chinese.html
@@ -165,14 +165,18 @@
                   <p> Contact us for more details.</p>
                 </div>
               </div>
-        <div class="images" style="border-bottom:2px solid #000; margin-bottom:50px; padding-bottom:40px;">
-          <img class="slim" style="float:left; max-width:100%; margin-left:230px" src="images/chinese.jpg"  />
-          <img class="slim" style="float:left; max-width:100%; margin-left:230px" src="images/chinese2.jpg"  />
-          <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts3.jpg"  />
-          <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts4.jpg"  />
-          <img class="lazy" style="float:left; max-width:100%;" src="images/stkitts5.jpg"  />
-          <img class="lazy" style="float:left; max-width:100%;" src="images/arch.jpg"  />
-          <img class="lazy" style="float:left; max-width:100%;" src="images/arch2.jpg"  />
+      <div class="images" style="border-bottom:2px solid #000; margin-bottom:50px; padding-bottom:40px;">
+        <img class="lazy" style="float: left; max-width: 433px;  display: block;" src="images/chinese.jpg" >
+        <img class="lazy" style="float: right; margin-right: 0px; max-width: 433px; margin: 0px 11px; display: block;" src="images/chinese2.jpg">
+
+        <img class="lazy" style="float: left; max-width: 433px;  display: block;" src="images/chinese6.jpg" >
+        <img class="lazy" style="float: right; margin-right: 0px; max-width: 433px; margin: 0px 11px; display: block;" src="images/chinese.jpg">
+
+
+          <img class="lazy" src="images/chinese6.jpg"  />
+           <img class="lazy" src="images/chinese7.jpg"  />
+          <img class="lazy" src="images/s2.jpg"  />
+
       </div>
 
 </div>
