changes made to page

--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         </div>
           </li>
 
+         <li class="slide" style="background-image:url('images/cabin.JPG')">
+        <div class="featuredText">
+          <h3 style="color:#ffffff;">Completed</h3>
+            <span class="featureDivider" style="background-color:#ffffff;"></span>
+            <a href="cabin.html" class="featuredLink" style="color:#ffffff;">Cabin in the Woods</a>
+          </div>
+        </li>
+
         <li class="slide" style="background-image:url('images/aladdin.JPG')">
         <div class="featuredText">
           <h3 style="color:#ffffff;">Completed</h3>
@@ -142,6 +150,8 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
             <a href="aladdin.html" class="featuredLink" style="color:#ffffff;">Arabic Palace</a>
           </div>
         </li>
+
+
       </ul>
     </div>
     <a class="baseBlock" href="#" title="projects"><span>Projects</span></a>
