--- a/pavilion.html
+++ b/pavilion.html
@@ -170,19 +170,16 @@
         <img class="lazy" style="float: left; max-width: 433px;  display: block;" src="images/pav3.jpg" >
         <img class="lazy" style="float: right; margin-right: 0px; max-width: 433px; margin: 0px 11px; display: block;" src="images/pav2.jpg">
 
-
-
         <img class="lazy" style="float: left; max-width: 433px;  display: block;" src="images/pav4.jpg" >
         <img class="lazy" style="float: right; margin-right: 0px; max-width: 433px; margin: 0px 11px; display: block;" src="images/pav5.jpg">
 
-          <img class="lazy" style="float:left; max-width:100%; " src="images/pav6.jpg"  />
+        <img class="lazy" style="float:left; max-width:100%; " src="images/pav6.jpg"  />
 
-          <img class="lazy" style="float:left; max-width:100%; " src="images/pav8.jpg"  />
+        <img class="lazy" style="float: left; max-width: 433px;  display: block;" src="images/pav8.jpg" >
+        <img class="lazy" style="float: right; margin-right: 0px; max-width: 433px; margin: 0px 11px; display: block;" src="images/pav7.jpg">
 
-          <img class="lazy" style="float:left; max-width:100%; " src="images/pav7.jpg"  />
 
       </div>
-
 </div>
           <div class="projectsBlock">
             <script type="text/javascript">
