--- a/projects.html
+++ b/projects.html
@@ -294,6 +294,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <img src="images/aladdin.jpg" class="colour" />
         <span class="overlay">Arabic Palace</span>
       </a>
+
        <a href="aladdin.html" id="_0" class="projectItem element featured residential">
         <img src="images/aladdin5.jpg" class="colour" />
         <span class="overlay">Arabic Gate</span>
@@ -318,6 +319,18 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <img src="images/sculp1.jpg" class="colour" />
         <span class="overlay"> Ledges</span>
         </a>
+
+        <a href="pavilion.html" id="_0" class="projectItem element featured public">
+        <img src="images/pav2.jpg" class="colour" />
+        <span class="overlay"> Pavilion</span>
+        </a>
+
+        <a href="cabin.html" id="_0" class="projectItem element featured public">
+        <img src="images/cabin.jpg" class="colour" />
+        <span class="overlay"> Small Cabin</span>
+        </a>
+
+
 </div><!-- #page -->
 
 
