--- a/sculptures.html
+++ b/sculptures.html
@@ -143,6 +143,10 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
            <img class="lazy" src="images/sculp9.jpg"  />
           <img class="lazy" src="images/s2.jpg"  />
 
+          <img class="lazy" style="float: left; max-width: 433px;  display: block;" src="images/sculp7.jpg" >
+        <img class="lazy" style="float: right; margin-right: 0px; max-width: 433px; margin: 0px 11px; display: block;" src="images/sculp8.jpg">
+
+
       </div>
 
 </div>
