changes added to description

--- a/studio.html
+++ b/studio.html
@@ -157,7 +157,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/room11.com.au\/"};
             </div>
             <div class="rightColumn">
               <p> <strong>Tony Hsu</strong></p>
-              <p> Founded ETGRC.co in 1989, Taiwan. ETGRC was the first company to perfect the Glassfibre Reinforced Concrete technologies. The first factory was built in ....... and have since expanded to China, where the main factory now stands in ShuZhou. </p>
+              <p> Founded ETGRC.co in 1989, Taiwan. ETGRC was the first company to perfect the Glassfibre Reinforced Concrete technologies. The first factory was built in Taiwan and have since expanded to China, where the main factory now stands in ShuZhou. </p>
             </div>
           </div>
         </div>
