--- a/index.html
+++ b/index.html
@@ -585,34 +585,29 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
   </div><!-- #primary -->
 
 
-  <footer id="colophon" role="contentinfo">
+ <footer id="colophon" role="contentinfo">
     <div class="footerInner">
 
 <div id="supplementary" class="three">
     <div id="first" class="widget-area" role="complementary">
-    <aside id="text-2" class="widget widget_text">      <div class="textwidget"><p>&copy; Room11 Architects</p>
+    <aside id="text-2" class="widget widget_text">      <div class="textwidget"><p>&copy; ETGRC</p>
 </div>
     </aside>  </div><!-- #first .widget-area -->
 
     <div id="second" class="widget-area" role="complementary">
-    <aside id="text-3" class="widget widget_text">      <div class="textwidget">MLB +61 3 9419 5575</div>
+    <aside id="text-3" class="widget widget_text">      <div class="textwidget">Tel: 13 771 769 123 / 15 370 060 708</div>
     </aside>  </div><!-- #second .widget-area -->
 
     <div id="third" class="widget-area" role="complementary">
-    <aside id="text-4" class="widget widget_text">      <div class="textwidget">HBT +61 3 6224 8642</div>
+    <aside id="text-4" class="widget widget_text">      <div class="textwidget">Fax: 051 266 916 877</div>
     </aside>  </div><!-- #third .widget-area -->
 
     <div id="fourth" class="widget-area" role="complementary">
-    <aside id="text-5" class="widget widget_text">      <div class="textwidget"><p><a href="mailto:info@room11.com.au" target="_blank">info@room11.com.au</a></p>
+    <aside id="text-5" class="widget widget_text">      <div class="textwidget"><p><a href="mailto:taiwangrc@gmail.com.tw" target="_blank">taiwangrc@gmail.com.tw</a></p>
 </div>
     </aside>  </div><!-- #third .widget-area -->
-  </div><!-- #supplementary -->     <a target="_blank" href="https://www.facebook.com/pages/Room11-Architects/473226692743328" class="facebook"></a>
-      <a target="_blank" href="https://twitter.com/Room11Architect" class="twitter"></a>
-      <a target="_blank" href="https://plus.google.com/104841969885697828326" class="gplus"></a>
-      <a target="_blank" href="http://pinterest.com/room11arch/" class="pinterest"></a>
-      <div id="site-generator">
-                <a href="http://wordpress.org/" title="Semantic Personal Publishing Platform" rel="generator">Proudly powered by WordPress</a>
-      </div>
+  </div>
+
     </div>
   </footer><!-- #colophon -->
 </div><!-- #page -->
