--- a/pavilion.html
+++ b/pavilion.html
@@ -93,7 +93,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
 
 </ul></div>     </nav><!-- #access -->
     </div>
-  </header><!-- #branding -->
+  </header><!-- #branding -->ub
 
   <div id="main">
     <script type="text/javascript">
