--- a/agro-tour.html
+++ b/agro-tour.html
@@ -27,7 +27,10 @@
                 var s = document.getElementsByTagName('script')[0];
                 s.parentNode.insertBefore(ga, s);
             })();
-            //]]></script>
+            //]]>
+            /* var bcf_settings = { buttonText:'Contact Us', buttonTop:'30%', language:'en_US' }; // Better Contact Form Settings */ (function (d, s, id) { if ('https:' == document.location.protocol || d.getElementById(id)) return; var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s); js.id = id; js.src = "http://bettercontactform.com/contact/media/f/7/f7de6fed9bb22ae0408794ba415c03ad31c2dfaa.js"; fjs.parentNode.insertBefore(js, fjs); }(document, "script", "bcf-render"));
+
+        </script>
 
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js?ver=3.8.3'></script>
 <script type= 'text/javascript' src = 'js/scrollTo.js'></script>
@@ -88,7 +91,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <div class="menu-main-menu-container"><ul id="menu-main-menu" class="menu"><li id="menu-item-23" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="index.html" >Home</a></li>
         <li id="menu-item-22" class="studio menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="studio.html" >Studio</a></li>
         <li id="menu-item-21" class="projects menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="projects.html" >Projects</a></li>
-        <li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a href="http://room11.com.au/contact/" >Contact</a></li>
+
 
 
 </ul></div>     </nav><!-- #access -->
