--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,8 @@
                 var s = document.getElementsByTagName('script')[0];
                 s.parentNode.insertBefore(ga, s);
             })();
-            //]]></script>
+            /* var bcf_settings = { buttonText:'Contact Us', buttonTop:'30%', language:'en_US' }; // Better Contact Form Settings */ (function (d, s, id) { if ('https:' == document.location.protocol || d.getElementById(id)) return; var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s); js.id = id; js.src = "http://bettercontactform.com/contact/media/f/7/f7de6fed9bb22ae0408794ba415c03ad31c2dfaa.js"; fjs.parentNode.insertBefore(js, fjs); }(document, "script", "bcf-render"));
+            </script>
 
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js?ver=3.8.3'></script>
 <script type= 'text/javascript' src = 'js/scrollTo.js'></script>
