--- a/aladdin.html
+++ b/aladdin.html
@@ -111,14 +111,9 @@
 
       <nav id="access" role="navigation">
         <h3 class="assistive-text">Main menu</h3>
-                <div class="skip-link"><a class="assistive-text" href="#content" title="Skip to primary content">Skip to primary content</a></div>
-        <div class="skip-link"><a class="assistive-text" href="#secondary" title="Skip to secondary content">Skip to secondary content</a></div>
-                <div class="menu-main-menu-container"><ul id="menu-main-menu" class="menu"><li id="menu-item-23" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="index.html" >Home</a></li>
-<li id="menu-item-22" class="studio menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="http://room11.com.au/studio-page/" >Studio</a></li>
-<li id="menu-item-21" class="projects menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="http://room11.com.au/projects/" >Projects</a></li>
-<li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a href="http://room11.com.au/contact/" >Contact</a></li>
-<li id="menu-item-19" class="news menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-19"><a href="http://room11.com.au/news/" >News</a></li>
-
+        <div class="menu-main-menu-container"><ul id="menu-main-menu" class="menu"><li id="menu-item-23" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="index.html" >Home</a></li>
+        <li id="menu-item-22" class="studio menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="studio.html" >Studio</a></li>
+        <li id="menu-item-21" class="projects menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="projects.html" >Projects</a></li>
 </ul></div>     </nav><!-- #access -->
     </div>
   </header><!-- #branding -->
