update favion icon

--- a/aladdin.html
+++ b/aladdin.html
@@ -6,6 +6,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=1024" />
 <title>ETGRC</title>
+<link rel="icon" type="image/png" href="images/icon.png"/>
+
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <link rel="stylesheet" type="text/css" media="all" href="stylesheets/style.css" />
 
@@ -102,8 +104,10 @@
 <div id="page" class="hfeed">
   <header id="branding" role="banner">
     <div class="headerInner">
+      <img src = "images/icon.png" class ="logo">
+
       <hgroup style="display:none;">
-        <h1 id="site-title"><span><a href="http://room11.com.au/" title="Room 11" rel="home">Room 11</a></span></h1>
+
         <h2 id="site-description"></h2>
       </hgroup>
 
