--- a/c-palace.html
+++ b/c-palace.html
@@ -6,6 +6,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=1024" />
 <title>ETGRC</title>
+<link rel="icon" type="image/png" href="images/icon.png"/>
+
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <link rel="stylesheet" type="text/css" media="all" href="stylesheets/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
@@ -81,7 +83,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
 <div id="page" class="hfeed">
   <header id="branding" role="banner">
     <div class="headerInner">
-      <!-- <a href="http://room11.com.au/" class="logo"></a> -->
+      <img src = "images/icon.png" class ="logo">
 
 
      <nav id="access" role="navigation">
