--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=1024" />
 <title>ETGRC</title>
+<link rel="icon" type="image/png" href="images/icon.png"/>
+
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <link rel="stylesheet" type="text/css" media="all" href="stylesheets/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
