--- a/sculptures.html
+++ b/sculptures.html
@@ -6,6 +6,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=1024" />
 <title>ETGRC</title>
+<link rel="icon" type="image/png" href="images/icon.png"/>
+
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <link rel="stylesheet" type="text/css" media="all" href="stylesheets/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
@@ -81,10 +83,12 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
 <div id="page" class="hfeed">
   <header id="branding" role="banner">
     <div class="headerInner">
+    <img src = "images/icon.png" class ="logo">
+
      <nav id="access" role="navigation">
         <h3 class="assistive-text">Main menu</h3>
         <div class="menu-main-menu-container"><ul id="menu-main-menu" class="menu"><li id="menu-item-23" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="index.html" >Home</a></li>
-        <li id="menu-item-22" class="studio menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="studio.html" >Studio</a></li>
+        <li id="menu-item-22" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="studio.html" >Studio</a></li>
         <li id="menu-item-21" class="projects menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="projects.html" >Projects</a></li>
 
 
