--- a/projects.html
+++ b/projects.html
@@ -337,6 +337,32 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         </a>
       </div><!-- #page -->
 
+    <footer id="colophon" role="contentinfo">
+    <div class="footerInner">
+
+<div id="supplementary" class="three">
+    <div id="first" class="widget-area" role="complementary">
+    <aside id="text-2" class="widget widget_text">      <div class="textwidget"><p>&copy; ETGRC</p>
+</div>
+    </aside>  </div><!-- #first .widget-area -->
+
+    <div id="second" class="widget-area" role="complementary">
+    <aside id="text-3" class="widget widget_text">      <div class="textwidget">Tel: 13 771 769 123 / 15 370 060 708</div>
+    </aside>  </div><!-- #second .widget-area -->
+
+    <div id="third" class="widget-area" role="complementary">
+    <aside id="text-4" class="widget widget_text">      <div class="textwidget">Fax: 051 266 916 877</div>
+    </aside>  </div><!-- #third .widget-area -->
+
+    <div id="fourth" class="widget-area" role="complementary">
+    <aside id="text-5" class="widget widget_text">      <div class="textwidget"><p><a href="mailto:taiwangrc@gmail.com.tw" target="_blank">taiwangrc@gmail.com.tw</a></p>
+</div>
+    </aside>  </div><!-- #third .widget-area -->
+  </div>
+
+    </div>
+  </footer><!-- #colophon -->
+
 
 </body>
 </html>
