change image name

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
                 <a href="agro-tour.html" class="featuredLink" style="color:#ffffff;">St.Kitts Agro-Tourism Project</a>
           </div>
         </li>
-        <li class="slide" style="background-image:url('images/red.jpg')">
+        <li class="slide" style="background-image:url('images/red.JPG')">
         <div class="featuredText">
            <h3 style="color:#ffffff;">Completed</h3>
             <span class="featureDivider" style="background-color:#ffffff;"></span>
