adjust jpg letter case

--- a/c-palace.html
+++ b/c-palace.html
@@ -118,7 +118,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
       <div id="content" role="main">
         <div class="contentInner">
           <div class="projectInner">
-            <img src="images/red.jpg" style="width:900px; margin-left:30px" />
+            <img src="images/red.JPG" style="width:900px; margin-left:30px" />
              <h2 class="projectTitle">Chinese Palace Decoration</h2>
               <div class="projectTitleDivider"><span></span></div>
                 <div class="postCats">
@@ -136,9 +136,9 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
                 </div>
               </div>
         <div class="images" style="border-bottom:2px solid #000; margin-bottom:50px; padding-bottom:40px;">
-          <img class="lazy" src="images/red1.jpg"  />
-          <img class="lazy" src="images/red5.jpg"  />
-          <img class="lazy" src="images/red3.jpg"  />
+          <img class="lazy" src="images/red1.JPG"  />
+          <img class="lazy" src="images/red5.JPG"  />
+          <img class="lazy" src="images/red3.JPG"  />
 
       </div>
 
