--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
           </div>
         </li>
 
-        <li class="slide" style="background-image:url('images/aladdin.JPG')">
+        <li class="slide" style="background-image:url('images/aladdin.jpg')">
         <div class="featuredText">
           <h3 style="color:#ffffff;">Completed</h3>
             <span class="featureDivider" style="background-color:#ffffff;"></span>
@@ -324,11 +324,11 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
       </a>
 
        <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
-        <img src="images/red.jpg" class="colour" />
+        <img src="images/red.JPG" class="colour" />
         <span class="overlay">Palace Roof</span>
       </a>
       <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
-        <img src="images/red2.jpg" class="colour" />
+        <img src="images/red2.JPG" class="colour" />
         <span class="overlay">Chinese Palace Roof</span>
       </a>
        <a href="aladdin.html" id="_0" class="projectItem element featured residential">
@@ -337,7 +337,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
       </a>
 
        <a href="aladdin.html" id="_0" class="projectItem element featured residential">
-        <img src="images/aladdin5.jpg" class="colour" />
+        <img src="images/aladdin5.JPG" class="colour" />
         <span class="overlay">Arabic Gate</span>
       </a>
        <a href="sculptures.html" id="_0" class="projectItem element public">
@@ -349,7 +349,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         <span class="overlay">Decoration</span>
         </a>
         <a href="sculptures.html" id="_0" class="projectItem element featured public">
-        <img src="images/sculp8.jpg" class="colour" />
+        <img src="images/sculp8.JPG" class="colour" />
         <span class="overlay">Chinese Arch</span>
         </a>
         <a href="sculptures.html" id="_0" class="projectItem element featured public">
@@ -362,12 +362,12 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
         </a>
 
         <a href="pavilion.html" id="_0" class="projectItem element featured public">
-        <img src="images/pav2.jpg" class="colour" />
+        <img src="images/pav2.JPG" class="colour" />
         <span class="overlay"> Pavilion</span>
         </a>
 
         <a href="cabin.html" id="_0" class="projectItem element featured public">
-        <img src="images/cabin.jpg" class="colour" />
+        <img src="images/cabin.JPG" class="colour" />
         <span class="overlay"> Small Cabin</span>
         </a>
       </div><!-- #content -->
