ad just jpg letter case

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
       </a>
 
       <a href="agro-tour.html" id="_0" class="projectItem element commercial in-progress ">
-        <img src="images/stkitts2.jpg" class="colour" />
+        <img src="images/stkitts2.JPG" class="colour" />
         <span class="overlay">Window Arch</span>
       </a>
 
