--- a/aladdin.html
+++ b/aladdin.html
@@ -307,14 +307,14 @@
                                     </ul>
                 </div>
               </div>
-                              <div id="container" class="clearfix">
+     <div id="container" class="clearfix">
       <a href="agro-tour.html" id="_0" class="projectItem element featured commercial in-progress ">
         <img src="images/stkitts1.jpg" class="colour" />
         <span class="overlay">Coffee House</span>
       </a>
 
       <a href="agro-tour.html" id="_0" class="projectItem element commercial in-progress ">
-        <img src="images/stkitts2.jpg" class="colour" />
+        <img src="images/stkitts2.JPG" class="colour" />
         <span class="overlay">Window Arch</span>
       </a>
 
@@ -334,11 +334,11 @@
       </a>
 
        <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
-        <img src="images/red.jpg" class="colour" />
+        <img src="images/red.JPG" class="colour" />
         <span class="overlay">Palace Roof</span>
       </a>
       <a href="c-palace.html" id="_0" class="projectItem element featured commercial">
-        <img src="images/red2.jpg" class="colour" />
+        <img src="images/red2.JPG" class="colour" />
         <span class="overlay">Chinese Palace Roof</span>
       </a>
        <a href="aladdin.html" id="_0" class="projectItem element featured residential">
@@ -347,7 +347,7 @@
       </a>
 
        <a href="aladdin.html" id="_0" class="projectItem element featured residential">
-        <img src="images/aladdin5.jpg" class="colour" />
+        <img src="images/aladdin5.JPG" class="colour" />
         <span class="overlay">Arabic Gate</span>
       </a>
        <a href="sculptures.html" id="_0" class="projectItem element public">
@@ -359,7 +359,7 @@
         <span class="overlay">Decoration</span>
         </a>
         <a href="sculptures.html" id="_0" class="projectItem element featured public">
-        <img src="images/sculp8.jpg" class="colour" />
+        <img src="images/sculp8.JPG" class="colour" />
         <span class="overlay">Chinese Arch</span>
         </a>
         <a href="sculptures.html" id="_0" class="projectItem element featured public">
@@ -372,16 +372,15 @@
         </a>
 
         <a href="pavilion.html" id="_0" class="projectItem element featured public">
-        <img src="images/pav2.jpg" class="colour" />
+        <img src="images/pav2.JPG" class="colour" />
         <span class="overlay"> Pavilion</span>
         </a>
 
         <a href="cabin.html" id="_0" class="projectItem element featured public">
-        <img src="images/cabin.jpg" class="colour" />
+        <img src="images/cabin.JPG" class="colour" />
         <span class="overlay"> Small Cabin</span>
         </a>
       </div><!-- #page -->
-
           </div>
         </div>
       </div><!-- #content -->
