add link to logo

--- a/studio.html
+++ b/studio.html
@@ -81,7 +81,7 @@ var mailchimpSF = {"ajax_url":"http:\/\/etgrc.com\/"};
 <div id="page" class="hfeed">
   <header id="branding" role="banner">
     <div class="headerInner">
-      <img src = "images/icon.png" class ="logo">
+      <a href="index.html"><img src = "images/icon.png" class ="logo"></a>
 
 
 
